--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "serve": "^13.0.2",
     "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
