--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "serve": "^13.0.2",
     "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "serve -s build"
+    "start": "serve -s build",
+    "heroku-postbuild": "pnm run build"
+    
   },
   "eslintConfig": {
     "extends": [
