--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "serve -s build",
-    "heroku-postbuild": "pnm run build"
+
+
     
   },
   "eslintConfig": {
