--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start": "serve -s build",
-    "heroku-postbuild": "pnm run build"
+    "heroku-postbuild": "npm run build"
     
   },
   "eslintConfig": {
